# mi-brazo-robot-ros2-iron

./: .gitignore  README.md
src/ros2_linkattacher/src/: gazebo_link_attacher.cpp
src/xolobot_arm/: CMakeLists.txt  package.xml
src/xolobot_arm/launch/: xolobot_arm_control.launch.py
src/xolobot_arm/models/: model.config  xolobot.urdf  xolobot_arm.sdf
src/xolobot_arm/models/meshes/: antebrazo_mano_izq.dae  biceps_izq_colision.dae  codo_izq.dae  codo_izq_colision.dae  codo_izq_tuercas.dae  hombro_alto.dae  hombro_alto_colision.dae  hombro_bajo_colision.dae  model.config  mono.dae  pulgar_3.dae
src/xolobot_arm/models/meshes/backup/: codo_izq.dae  hombro_alto.dae  pulgar_1_izq.dae  pulgar_2.dae
src/xolobot_arm/models/meshes/backup/dedos/: dedo_anular.blend  dedo_anular_1.dae  dedo_anular_2.dae  dedo_anular_3.dae  dedo_cordial.blend  dedo_cordial.blend1  dedo_cordial_1.dae  dedo_cordial_2.dae  dedo_cordial_3.dae  dedo_indice.blend1  dedo_indice_1.dae  dedo_indice_2.dae  dedo_indice_3.dae  dedo_menique.blend  dedo_menique_1.blend  dedo_menique_1.blend1  dedo_menique_1.dae  dedo_menique_2.dae  dedo_menique_3.blend  dedo_menique_3.dae
src/xolobot_arm/models/meshes/dedos/: dedo_anular.blend1  dedo_anular_1.dae  dedo_anular_1_colision.dae  dedo_anular_2.dae  dedo_anular_2_colision.dae  dedo_anular_3.dae  dedo_anular_3_colision.dae  dedo_cordial_1.dae  dedo_cordial_1_colision.dae  dedo_cordial_2.dae  dedo_cordial_2_colision.dae  dedo_cordial_3.dae  dedo_cordial_3_colision.dae  dedo_indice.blend  dedo_indice_1.dae  dedo_indice_1_colision.dae  dedo_indice_2.dae  dedo_indice_2_colision.dae  dedo_indice_3.dae  dedo_indice_3_colision.dae  dedo_menique_1.dae  dedo_menique_1_colision.dae  dedo_menique_2.blend  dedo_menique_2.blend1  dedo_menique_2.dae  dedo_menique_2_colision.dae  dedo_menique_3.blend1  dedo_menique_3.dae  dedo_menique_3_colision.dae  pulgar_1_izq.dae  pulgar_1_izq_colision.dae  pulgar_2.dae  pulgar_2_colision.dae  pulgar_3.dae  pulgar_3_colision.dae
src/xolobot_arm/models/textures/: metal.material  model.config  xolobot.material
src/xolobot_arm/models/utileria/: model.config  objeto.sdf  objeto2.sdf  soporte.sdf  soporte2.sdf
src/xolobot_arm/worlds/: coca_levitando.world
src/xolobot_arm_server/: CMakeLists.txt  package.xml
src/xolobot_arm_server/launch/: arm_server.launch.py
src/xolobot_arm_server/src/: SimulationController.cpp  SimulationController.h  startServerNode.cpp
src/xolobot_control/: CMakeLists.txt  package.xml
src/xolobot_control/config/: xolobot_control.yaml
src/xolobot_control/launch/: xolobot_control.launch.py
