<?xml version="1.0"?>
<package format="3">
  <name>xolobot_arm</name>
  <version>0.0.0</version>
  <description>The xolobot_arm package</description>
  <maintainer email="monica@todo.todo">Monica</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>ros2_controllers</depend>
  <depend>control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
