<?xml version="1.0"?>
<package format="3">
  <name>xolobot_control</name>
  <version>0.0.0</version>
  <description>control</description>
  <maintainer email="monica@example.com">Monica</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>robot_state_publisher</depend>
  <depend>yaml_cpp_vendor</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
